--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,23 +4,101 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testAnnotations.GoogleSearchTestCase</td>
+<td>testNGFlag.Flag7</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>serach3</td>
-<td>&nbsp;</td></tr>
+<td>methodST1</td>
+<td>Smoke Tetsing </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
-<td>search2</td>
-<td>&nbsp;</td></tr>
+<td>methodIT6</td>
+<td>Integration Testing </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
-<td>search1</td>
-<td>&nbsp;</td></tr>
+<td>methodIT5</td>
+<td>Integration Testing </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>methodIT4</td>
+<td>Integration Testing </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>methodIT3</td>
+<td>Integration Testing </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>methodFT6</td>
+<td>Functional Testing </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>methodFT5</td>
+<td>Functional Testing </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>methodIT2</td>
+<td>Integration Testing </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>methodIT1</td>
+<td>Integration Testing </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>methodFT4</td>
+<td>Functional Testing </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>methodFT3</td>
+<td>Functional Testing </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>methodFT2</td>
+<td>Functional Testing </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>methodFT1</td>
+<td>Functional Testing </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>methodST6</td>
+<td>Smoke Tetsing </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>methodST5</td>
+<td>Smoke Tetsing </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>methodST4</td>
+<td>Smoke Tetsing </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>methodST3</td>
+<td>Smoke Tetsing </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>methodST2</td>
+<td>Smoke Tetsing </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -28,16 +106,8 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>setUp</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>tearDown</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
