--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,8 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>testNGFlag.Flag7.methodIT1</td></tr>
+<tr><td>testNGFlag.Flag7.methodIT2</td></tr>
+<tr><td>testNGFlag.Flag7.methodIT3</td></tr>
+<tr><td>testNGFlag.Flag7.methodIT5</td></tr>
+<tr><td>testNGFlag.Flag7.methodIT6</td></tr>
+<tr><td>testNGFlag.Flag7.methodIT4</td></tr>
 </table>
