--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,9 +1,13 @@
-<h2>Reporter output</h2><table><tr><td>test1Method1 method From DemoTest1</td></tr>
-<tr><td> test1Method2 method From DemoTest1</td></tr>
-<tr><td>test1Method3 method from DemoTest1</td></tr>
-<tr><td>test2Method1 method From DemoTest2</td></tr>
-<tr><td>test2Method2 method From DemoTest2</td></tr>
-<tr><td>test3Method1 method From DemoTest3</td></tr>
-<tr><td>test3Method2 method from DemoTest3</td></tr>
-<tr><td>test3Method3 method from DemoTest3</td></tr>
+<h2>Reporter output</h2><table><tr><td>Functional Test 1</td></tr>
+<tr><td>Functional Test 2</td></tr>
+<tr><td>Functional Test 3 </td></tr>
+<tr><td>Functional Test 4 </td></tr>
+<tr><td>Functional Test 5 </td></tr>
+<tr><td>Functional Test 6 </td></tr>
+<tr><td>Somke Test 1 </td></tr>
+<tr><td>Somke Test 2 </td></tr>
+<tr><td>Somke Test 3 </td></tr>
+<tr><td>Somke Test 4 </td></tr>
+<tr><td>Somke Test 5 </td></tr>
+<tr><td>Somke Test 6 </td></tr>
 </table>
