--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,24 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8c8dcf">  <td>23/05/25 11:08:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleSearchTestCase.serach3()[pri:0, instance:testAnnotations.GoogleSearchTestCase@6babf3bf]">serach3</td> 
-  <td>main@1727361096</td>   <td></td> </tr>
-<tr bgcolor="8c9a9c">  <td>23/05/25 11:08:30</td>   <td>-10323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:testAnnotations.GoogleSearchTestCase@6babf3bf]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1727361096</td>   <td></td> </tr>
-<tr bgcolor="8c9a9c">  <td>23/05/25 11:06:37</td>   <td>-122763</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.propertyMethod()[pri:0, instance:testAnnotations.GoogleSearchTestCase@6babf3bf]">&gt;&gt;propertyMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1727361096</td>   <td></td> </tr>
-<tr bgcolor="8c9a9c">  <td>23/05/25 11:08:46</td>   <td>6563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:testAnnotations.GoogleSearchTestCase@6babf3bf]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1727361096</td>   <td></td> </tr>
-<tr bgcolor="8c8dcf">  <td>23/05/25 11:07:23</td>   <td>-76558</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleSearchTestCase.search1()[pri:0, instance:testAnnotations.GoogleSearchTestCase@6babf3bf]">search1</td> 
-  <td>main@1727361096</td>   <td></td> </tr>
-<tr bgcolor="8c9a9c">  <td>23/05/25 11:08:30</td>   <td>-10323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:testAnnotations.GoogleSearchTestCase@6babf3bf]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1727361096</td>   <td></td> </tr>
-<tr bgcolor="8c9a9c">  <td>23/05/25 11:08:30</td>   <td>-10323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:testAnnotations.GoogleSearchTestCase@6babf3bf]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1727361096</td>   <td></td> </tr>
-<tr bgcolor="8c9a9c">  <td>23/05/25 11:08:46</td>   <td>6563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:testAnnotations.GoogleSearchTestCase@6babf3bf]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1727361096</td>   <td></td> </tr>
-<tr bgcolor="8c9a9c">  <td>23/05/25 11:08:46</td>   <td>6563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:testAnnotations.GoogleSearchTestCase@6babf3bf]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1727361096</td>   <td></td> </tr>
-<tr bgcolor="8c8dcf">  <td>23/05/25 11:08:14</td>   <td>-25676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleSearchTestCase.search2()[pri:0, instance:testAnnotations.GoogleSearchTestCase@6babf3bf]">search2</td> 
-  <td>main@1727361096</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/05/28 19:07:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodFT3()[pri:0, instance:testNGFlag.Flag7@79da8dc5]">methodFT3</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/05/28 19:07:42</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodIT4()[pri:0, instance:testNGFlag.Flag7@79da8dc5]">methodIT4</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/05/28 19:07:42</td>   <td>21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodIT6()[pri:0, instance:testNGFlag.Flag7@79da8dc5]">methodIT6</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/05/28 19:07:42</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodIT2()[pri:0, instance:testNGFlag.Flag7@79da8dc5]">methodIT2</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/05/28 19:07:42</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodIT5()[pri:0, instance:testNGFlag.Flag7@79da8dc5]">methodIT5</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/05/28 19:07:42</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodST3()[pri:0, instance:testNGFlag.Flag7@79da8dc5]">methodST3</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/05/28 19:07:42</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodFT2()[pri:0, instance:testNGFlag.Flag7@79da8dc5]">methodFT2</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/05/28 19:07:42</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodFT5()[pri:0, instance:testNGFlag.Flag7@79da8dc5]">methodFT5</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/05/28 19:07:42</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodST2()[pri:0, instance:testNGFlag.Flag7@79da8dc5]">methodST2</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/05/28 19:07:42</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodIT3()[pri:0, instance:testNGFlag.Flag7@79da8dc5]">methodIT3</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/05/28 19:07:42</td>   <td>28</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodST4()[pri:0, instance:testNGFlag.Flag7@79da8dc5]">methodST4</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/05/28 19:07:42</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodIT1()[pri:0, instance:testNGFlag.Flag7@79da8dc5]">methodIT1</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/05/28 19:07:42</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodST6()[pri:0, instance:testNGFlag.Flag7@79da8dc5]">methodST6</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/05/28 19:07:42</td>   <td>29</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodST5()[pri:0, instance:testNGFlag.Flag7@79da8dc5]">methodST5</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/05/28 19:07:42</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodFT1()[pri:0, instance:testNGFlag.Flag7@79da8dc5]">methodFT1</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/05/28 19:07:42</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodFT6()[pri:0, instance:testNGFlag.Flag7@79da8dc5]">methodFT6</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/05/28 19:07:42</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodST1()[pri:0, instance:testNGFlag.Flag7@79da8dc5]">methodST1</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/05/28 19:07:42</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodFT4()[pri:0, instance:testNGFlag.Flag7@79da8dc5]">methodFT4</td> 
+  <td>main@1180244251</td>   <td></td> </tr>
 </table>
