--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,22 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8c8dcf">  <td>23/05/25 10:41:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest1.test1Method3()[pri:0, instance:testNGPackage2.DemoTest1@2cd2a21f]">test1Method3</td> 
-  <td>main@1180244251</td>   <td></td> </tr>
-<tr bgcolor="8c8dcf">  <td>23/05/25 10:41:21</td>   <td>-19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest1.test1Method1()[pri:0, instance:testNGPackage2.DemoTest1@2cd2a21f]">test1Method1</td> 
-  <td>main@1180244251</td>   <td></td> </tr>
-<tr bgcolor="ceadd4">  <td>23/05/25 10:41:21</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest2.test2Method2()[pri:0, instance:testNGPackage2.DemoTest2@b62d79]">test2Method2</td> 
-  <td>main@1180244251</td>   <td></td> </tr>
-<tr bgcolor="8c8dcf">  <td>23/05/25 10:41:21</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest1.test1Method2()[pri:0, instance:testNGPackage2.DemoTest1@2cd2a21f]">test1Method2</td> 
-  <td>main@1180244251</td>   <td></td> </tr>
-<tr bgcolor="aed86c">  <td>23/05/25 10:41:21</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest3.test3Method3()[pri:0, instance:testNGPackage2.DemoTest3@1613674b]">test3Method3</td> 
-  <td>main@1180244251</td>   <td></td> </tr>
-<tr bgcolor="aed86c">  <td>23/05/25 10:41:21</td>   <td>22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest3.test3Method1()[pri:0, instance:testNGPackage2.DemoTest3@1613674b]">test3Method1</td> 
-  <td>main@1180244251</td>   <td></td> </tr>
-<tr bgcolor="ceadd4">  <td>23/05/25 10:41:21</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest2.test2Method3()[pri:0, instance:testNGPackage2.DemoTest2@b62d79]">test2Method3</td> 
-  <td>main@1180244251</td>   <td></td> </tr>
-<tr bgcolor="ceadd4">  <td>23/05/25 10:41:21</td>   <td>7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest2.test2Method1()[pri:0, instance:testNGPackage2.DemoTest2@b62d79]">test2Method1</td> 
-  <td>main@1180244251</td>   <td></td> </tr>
-<tr bgcolor="aed86c">  <td>23/05/25 10:41:21</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest3.test3Method2()[pri:0, instance:testNGPackage2.DemoTest3@1613674b]">test3Method2</td> 
-  <td>main@1180244251</td>   <td></td> </tr>
+<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodFT1()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodFT1</td> 
+  <td>main@656479172</td>   <td></td> </tr>
+<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodFT3()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodFT3</td> 
+  <td>main@656479172</td>   <td></td> </tr>
+<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodST1()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodST1</td> 
+  <td>main@656479172</td>   <td></td> </tr>
+<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>40</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodST3()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodST3</td> 
+  <td>main@656479172</td>   <td></td> </tr>
+<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>42</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodST4()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodST4</td> 
+  <td>main@656479172</td>   <td></td> </tr>
+<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>44</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodST5()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodST5</td> 
+  <td>main@656479172</td>   <td></td> </tr>
+<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>29</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodFT6()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodFT6</td> 
+  <td>main@656479172</td>   <td></td> </tr>
+<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodFT2()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodFT2</td> 
+  <td>main@656479172</td>   <td></td> </tr>
+<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>46</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodST6()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodST6</td> 
+  <td>main@656479172</td>   <td></td> </tr>
+<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>39</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodST2()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodST2</td> 
+  <td>main@656479172</td>   <td></td> </tr>
+<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodFT4()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodFT4</td> 
+  <td>main@656479172</td>   <td></td> </tr>
+<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodFT5()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodFT5</td> 
+  <td>main@656479172</td>   <td></td> </tr>
 </table>
