--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,101 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testNGFlag.Flag7</td>
+<td>testNGExecution.SelectBrowser</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>methodST1</td>
-<td>Smoke Tetsing </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>methodIT6</td>
-<td>Integration Testing </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>methodIT5</td>
-<td>Integration Testing </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>methodIT4</td>
-<td>Integration Testing </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>methodIT3</td>
-<td>Integration Testing </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>methodFT6</td>
-<td>Functional Testing </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>methodFT5</td>
-<td>Functional Testing </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>methodIT2</td>
-<td>Integration Testing </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>methodFT4</td>
-<td>Functional Testing </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>methodIT1</td>
-<td>Integration Testing </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>methodFT3</td>
-<td>Functional Testing </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>methodFT2</td>
-<td>Functional Testing </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>methodFT1</td>
-<td>Functional Testing </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>methodST6</td>
-<td>Smoke Tetsing </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>methodST5</td>
-<td>Smoke Tetsing </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>methodST4</td>
-<td>Smoke Tetsing </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>methodST3</td>
-<td>Smoke Tetsing </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>methodST2</td>
-<td>Smoke Tetsing </td>
-</tr>
+<td>method1</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
