--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,4 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Functional Testing</td><td>Flag7.methodFT1()[pri:0, instance:testNGFlag.Flag7@be35cd9]<br/>Flag7.methodFT2()[pri:0, instance:testNGFlag.Flag7@be35cd9]<br/>Flag7.methodFT4()[pri:0, instance:testNGFlag.Flag7@be35cd9]<br/>Flag7.methodFT5()[pri:0, instance:testNGFlag.Flag7@be35cd9]<br/>Flag7.methodFT6()[pri:0, instance:testNGFlag.Flag7@be35cd9]<br/>Flag7.methodFT3()[pri:0, instance:testNGFlag.Flag7@be35cd9]<br/></td></tr>
-<tr><td>Smoke Tetsing</td><td>Flag7.methodST3()[pri:0, instance:testNGFlag.Flag7@be35cd9]<br/>Flag7.methodST4()[pri:0, instance:testNGFlag.Flag7@be35cd9]<br/>Flag7.methodST5()[pri:0, instance:testNGFlag.Flag7@be35cd9]<br/>Flag7.methodST2()[pri:0, instance:testNGFlag.Flag7@be35cd9]<br/>Flag7.methodST6()[pri:0, instance:testNGFlag.Flag7@be35cd9]<br/>Flag7.methodST1()[pri:0, instance:testNGFlag.Flag7@be35cd9]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
