--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,28 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodFT1()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodFT1</td> 
-  <td>main@656479172</td>   <td></td> </tr>
-<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodFT3()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodFT3</td> 
-  <td>main@656479172</td>   <td></td> </tr>
-<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodST1()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodST1</td> 
-  <td>main@656479172</td>   <td></td> </tr>
-<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>40</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodST3()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodST3</td> 
-  <td>main@656479172</td>   <td></td> </tr>
-<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>42</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodST4()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodST4</td> 
-  <td>main@656479172</td>   <td></td> </tr>
-<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>44</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodST5()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodST5</td> 
-  <td>main@656479172</td>   <td></td> </tr>
-<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>29</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodFT6()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodFT6</td> 
-  <td>main@656479172</td>   <td></td> </tr>
-<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodFT2()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodFT2</td> 
-  <td>main@656479172</td>   <td></td> </tr>
-<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>46</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodST6()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodST6</td> 
-  <td>main@656479172</td>   <td></td> </tr>
-<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>39</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodST2()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodST2</td> 
-  <td>main@656479172</td>   <td></td> </tr>
-<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodFT4()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodFT4</td> 
-  <td>main@656479172</td>   <td></td> </tr>
-<tr bgcolor="f4937d">  <td>23/05/28 19:44:08</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flag7.methodFT5()[pri:0, instance:testNGFlag.Flag7@be35cd9]">methodFT5</td> 
-  <td>main@656479172</td>   <td></td> </tr>
+<tr bgcolor="73c1fb">  <td>23/07/18 23:30:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SelectBrowser.method1(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:testNGExecution.SelectBrowser@2dde1bff]">method1</td> 
+  <td>main@697960108</td>   <td></td> </tr>
+<tr bgcolor="73c1fb">  <td>23/07/18 23:31:07</td>   <td>27638</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SelectBrowser.method1(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:testNGExecution.SelectBrowser@7e7be63f]">method1</td> 
+  <td>main@697960108</td>   <td></td> </tr>
 </table>
