--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,13 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>Functional Test 1</td></tr>
-<tr><td>Functional Test 2</td></tr>
-<tr><td>Functional Test 3 </td></tr>
-<tr><td>Functional Test 4 </td></tr>
-<tr><td>Functional Test 5 </td></tr>
-<tr><td>Functional Test 6 </td></tr>
-<tr><td>Somke Test 1 </td></tr>
-<tr><td>Somke Test 2 </td></tr>
-<tr><td>Somke Test 3 </td></tr>
-<tr><td>Somke Test 4 </td></tr>
-<tr><td>Somke Test 5 </td></tr>
-<tr><td>Somke Test 6 </td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
